fix: monorepo cross-audit security headers and options preflight